--- a/project01(nodejs,socketio,express)/views/chatrooms.html
+++ b/project01(nodejs,socketio,express)/views/chatrooms.html
@@ -19,5 +19,8 @@
     <li>Nodejs</li>
     <li>Mongodb</li>
   </ul>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  
 </body>
 </html>
