--- a/starter kit/client/containers/App/App.css
+++ b/starter kit/client/containers/App/App.css
@@ -1,15 +1,13 @@
+
 .container {
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: #000;
+  background-color: #fff;
+
 }
 
 .testing {
-  color: #fff;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 10rem;
+  margin: 0 auto;
+  width: 1080px;
 }
