--- a/socketioRoom/public/style/index.css
+++ b/socketioRoom/public/style/index.css
@@ -9,6 +9,61 @@
   height: 100vh;
 }
 
+.join-container {
+  height: 100vh;
+  display: flex;
+  background-color: #0040ff;
+}
+
+.join-container {
+  justify-content: center;
+  align-items: center;
+}
+
+.box {
+  width: 300px;
+  background-color: #fff;
+  border-radius: 0.5rem;
+}
+
+.box h1 {
+  text-align: center;
+  padding: 1rem;
+}
+
+.join-input {
+  padding: 1rem;
+}
+
+.join-input label {
+  display: block;
+
+}
+
+.join-input input {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  height: 2rem;
+  
+}
+
+
+.join-field {
+  padding-top: 1rem;
+}
+
+.join-btn {
+  width: 100%;
+  height: 3rem;
+  line-height: 3rem;
+  background-color: #0040ff;
+  border: none;
+  color: #fff;
+  font-weight: 600;
+  border-radius: 0.3rem;
+}
+
 ul {
   list-style: none;
   padding: 1rem;
@@ -26,6 +81,7 @@ ul {
 
 #lists {
   height: 100vh;
+  overflow: scroll;
 }
 
 .form {
