--- a/chatApplication/views/layouts/nav.ejs
+++ b/chatApplication/views/layouts/nav.ejs
@@ -9,8 +9,13 @@
       <li><a href="#">Page 2</a></li>
     </ul> -->
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="/signin"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    <% if(user) { %>
+        <li><a href="/logout"><span class="glyphicon glyphicon-user"></span> Log Out</a></li>
+      </ul>
+    <% } else { %>
+        <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="/signin"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    <% } %>
     </ul>
   </div>
 </nav>
