--- a/chatApplication/views/signin.ejs
+++ b/chatApplication/views/signin.ejs
@@ -6,14 +6,22 @@
 </head>
 <body>
   <div class="container">
+      <form method="post" class="form-signin" action="/signin">
 
-      <form class="form-signin">
         <h2 class="form-signin-heading">Sign in</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password">
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <br/>
+        <ul class="list-group">
+          <li class="list-group-item">
+            <a href="/auth/facebook">
+              페이스북
+            </a>
+          </li>
+        </ul>
       </form>
 
     </div> <!-- /container -->
