--- a/chatApplication/views/signup.ejs
+++ b/chatApplication/views/signup.ejs
@@ -6,14 +6,17 @@
 </head>
 <body>
   <div class="container">
+      <% if (message.length > 0) { %>
+        <div class="alert alert-danger"><%= message %></div>
+      <% } %>
       <form method="post" class="form-signin" action="/signup">
         <h2 class="form-signin-heading">Sign Up</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" autofocus>
-        <label for="inputPassword" class="sr-only">Username</label>
-        <input type="text" name="username" id="inputName" class="form-control" placeholder="Name">
+        <input type="email" class="form-control" name="email" placeholder="Email address"autofocus>
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input type="text" class="form-control" name="username" placeholder="Username">
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password">
+        <input type="password" class="form-control" name="password" placeholder="Password">
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
       </form>
 
