--- a/chatApplication/views/layouts/body.ejs
+++ b/chatApplication/views/layouts/body.ejs
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <% if(user) { %>
-    <h1>Hello, Chat App! <%= user.common_profile.username %></h1>
+    <h1>Hello, Chat App! <%= user.common_profile.displayname %></h1>
   <% } else { %>
     <h1>Hello, Chat App!</h1>
   <% } %>
