--- a/chatApplication/views/mypage.ejs
+++ b/chatApplication/views/mypage.ejs
@@ -6,7 +6,25 @@
 <body>
   <% include ./layouts/nav %>
   <div class="container">
-    <h1>마이 페이지</h1>
+    <div class="well">
+      <h1 style="text-align:center">마이 페이지</h1>
+    </div>
+    <div class="row">
+      <div class="col-sm-4">
+        <ul class="list-group">
+          <li class="list-group-item" style="background-color: #212121; color:#fff;">내 정보</li>
+          <li class="list-group-item">즐겨찾기</li>
+          <li class="list-group-item">탈퇴</li>
+        </ul>
+      </div>
+    <div class="col-sm-8">
+      <ul class="list-group">
+        <li class="list-group-item">내 정보</li>
+        <li class="list-group-item">즐겨찾기</li>
+        <li class="list-group-item">탈퇴</li>
+      </ul>
+    </div>
+  </div>
   </div>
 </body>
 </html>
