--- a/chatApplication/views/signup.ejs
+++ b/chatApplication/views/signup.ejs
@@ -13,10 +13,12 @@
         <h2 class="form-signin-heading">Sign Up</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" class="form-control" name="email" placeholder="Email address"autofocus>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="text" class="form-control" name="username" placeholder="Username">
+        <label for="inputEmail" class="sr-only">Displayname</label>
+        <input type="text" class="form-control" name="displayname" placeholder="Displayname">
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" class="form-control" name="password" placeholder="Password">
+        <label for="inputPassword" class="sr-only">Confirm Password</label>
+        <input type="password" class="form-control" name="confirmpassword" placeholder="Confirm Password">
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
       </form>
 
